# concurrencyTests

./: CMakeLists.txt  README.md
cmake/: CxxFlags.cmake
experiments/: 01BasicBenchmarks.cpp  02tsPatternBookBenchmarks.cpp  03exceptions.cpp  04CacheLinePingPong.cpp  04NoFalseSharingTest.cpp  05CacheLinePingPong.cpp  06CompareWith05NoPingPong.cpp  06NoCacheLinePingPong.cpp  07CacheLinePingPong - Copy.cpp
experiments/TBC/: 06conditionVariable1.cpp
experiments/basicBenchmarks/: dequeTraverse10k.cpp  doNothing.cpp  fListTraverse10k.cpp  for100k.cpp  insert10PtrFList.cpp  insert10PtrVector.cpp  insert10StructFList.cpp  insert10StructVector.cpp  microSeconds10k.cpp  remove100PtrFList.cpp  remove100PtrVector.cpp  remove100StructFList.cpp  remove100StructVector.cpp  spinThread.cpp  vectorSwapNPop1000.cpp  vectorTraverse10k.cpp
experiments/exceptions/: basicTests.cpp  nestedExceptions.cpp  tryFunctionBlockConstructor.cpp
experiments/tsPatternBookBenchmarks/: insert10tsListBook.cpp  insert10tsQueueBook.cpp  insert10tsStackBook.cpp  remove100tsQueueBook.cpp  remove100tsStackBook.cpp  tsListBookTraverse10k.cpp  useThreadPool.cpp
include/: heirarchicalMutexBook.h  myExceptions.h  threadPool4.h  threadPoolBook.h  threadPoolBookImprovements.h  tsListBook.h  tsPseudoVec.h  tsPseudoVec2.h  tsQueueBook.h  tsStackBook.h
s/: build.sh  cacheProfile.sh  checkForDataRace.sh  checkRaceCondition.sh  debug.sh  leaks.sh  memAlloc.sh  profile.sh  profileBenchmarks.sh  profileHeap.sh  reindexRtags.sh  start.sh
unitTests/: unitTests.cpp  unitTestsBook.cpp
